--- a/src/Makefile
+++ b/src/Makefile
@@ -88,6 +88,12 @@ install:
 	@-ln -fsv $(C_DIR)/$(Tgt).so $(S_DIR)/lib$(Tgt).so
 	@-cp -fpvr ../$(Tgt) $(L_DIR)
 
+uninstall:
+	@-rm -f $(H_DIR)/$(Tgt).h
+	@-rm -f $(C_DIR)/$(Tgt).so
+	@-rm -f $(S_DIR)/lib$(Tgt).so
+	@-rm -fr $(L_DIR)/$(Tgt)
+
 build:	clean $(Tgt) 
 
 symbols: build
@@ -95,7 +101,6 @@ symbols: build
 
 $(Tgt):		$(Objs)
 	@-$(CC) -shared -Wl,-soname,$(Tgt).so,$(LIBS) -o $(Tgt).so $(Objs) $(LIBS)
-#	@-$(CC) -shared -Wl,-soname,$(Tgt).so -o $(Tgt).so $(LIBS) $(Objs)
 	@-rm -f $(Objs)
 	@echo
 
