Alternative include path for Lua headers

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,20 +29,9 @@ ifeq ($(D),1)
 DEBUG=1
 endif
 
-ifdef LINUX
-#INCDIR = -I/usr/include
-#LIBDIR = -L/usr/lib
-#LIBS = -lglfw
-endif
-ifdef MINGW
-#LIBS = -lglfw3 -llua
-LIBS = -llua
-endif
-
 Tgt	:= moonglfw
 Src := $(wildcard *.c)
 Objs := $(Src:.c=.o)
-
  
 COPT	+= -O2
 #COPT	+= -O0 -g
@@ -53,9 +42,15 @@ COPT 	+= -DLUAVER=$(LUAVER)
 ifdef LINUX
 COPT    += -fpic
 COPT	+= -DLINUX
+INCDIR = -I/usr/include/lua$(LUAVER)
+#INCDIR = -I/usr/include
+#LIBDIR = -L/usr/lib
+#LIBS = -lglfw
 endif
 ifdef MINGW
 COPT	+= -DMINGW
+#LIBS = -lglfw3 -llua
+LIBS = -llua
 endif
 
 ifdef DEBUG
