Makefile for MacOS

--- a/src/Makefile
+++ b/src/Makefile
@@ -118,6 +118,10 @@ install:
 	@-mkdir -pv $(L_DIR)
 	@-cp -fpv $(Tgt).h $(H_DIR)
 	@-cp -fpvr ../$(Tgt) $(L_DIR)
+ifdef MACOS
+	@-cp -fpv $(Tgt).$(DLL_EXT) $(C_DIR)/$(Tgt).so
+	@-ln -fsv $(C_DIR)/$(Tgt).so $(S_DIR)/lib$(Tgt).$(DLL_EXT)
+endif
 ifdef LINUX
 	@-cp -fpv $(Tgt).$(DLL_EXT) $(C_DIR)
 endif
