--- a/src/Makefile
+++ b/src/Makefile
@@ -58,6 +58,7 @@ Objs := $(Src:.c=.o)
 COPT	+= -O2
 #COPT	+= -O0 -g
 COPT	+= -Wall -Wextra -Wpedantic
+COPT	+= -DCOMPAT53_PREFIX=moonglfw_compat_
 COPT    += -std=gnu99
 COPT 	+= -DLUAVER=$(LUAVER)
 
